--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Títol de la Pàgina</title>
-    <link rel="stylesheet" href="css/main.css"> 
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="description-container"></div>
-            
+
             </div>
 
             <div class="card" id="exploracio" onclick="showDescriptionMobile('exploracio')">
@@ -246,7 +246,7 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                     
+
                     </div>
                 </li>
 
@@ -412,7 +412,7 @@
                     de qualitat i personalitzat.
                 </p>
             </div>
-            <div class="footer-section" id="footer-links">
+            <!--  <div class="footer-section" id="footer-links">
                 <h3>Enllaços útils</h3>
                 <ul>
                     <li><a href="https://www.podocat.cat/">Col·legi de Podòlegs de Catalunya</a></li>
@@ -422,15 +422,18 @@
                     <li><a href="#">Enllaç 3</a></li>
                     <li><a href="#">Enllaç 4</a></li>
                 </ul>
-            </div>
+            </div> -->
             <div class="footer-section" id="footer-map">
-                <h3>Direcció</h3>
+                <h3>Contacte</h3>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1246.9374193772633!2d2.812279767314603!3d41.984526933956545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bae72202ba0515%3A0x8d32d6272a8902c0!2sCarrer%20Joaquim%20Vayreda%2C%2065%2C%2017001%20Girona%2C%20Spain!5e0!3m2!1sen!2sar!4v1729975340613!5m2!1sen!2sar"
                     width="350" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+            </div>
+            <div class="information">
                 <p> <img src="images/ubicacion.png"> Joaquin Vayreda, 65 - 17001 Giriona</p>
-
+                <p> <img src="images/telefono.svg"> 972 20 77 16</p>
+                <p> <img src="images/mail.svg"> podevesa@gmail.com</p>
             </div>
         </div>
         <div class="footer-copy">
@@ -441,4 +444,5 @@
     <script src="scripts.js"></script>
 
 </body>
+
 </html>
