Arregla click del CTA en cards mobile

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="contact-container">
 
-                    <button class="CTA">Contacte amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacte amb nosaltres</button>
 
                     <div class="contact-content">
                         <div class="phone-box">
@@ -276,7 +276,7 @@
                         alteracions
                         a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin
                         en altres de més rellevància.</p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/quiropidia.webp" alt="Descripción Quiropidia" class="description-image active">
             </div>
@@ -287,7 +287,7 @@
                         l'estructura i la funció del cos. En el cas dels peus, una exploració biomecànica inclou una
                         anàlisi detallada de la petjada i la manera com el teu cos s'ajusta a la superfície on camines.
                     </p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/quiropidia.webp" alt="Descripción Exploracio Biomecànica" class="description-image">
             </div>
@@ -300,7 +300,7 @@
                     <h5>Per què triar-nos?</h5> <br>
                     <p class="tic"><img src="images/tic.png"> Plantilles ortopèdiques a mida.</p>
                     <p><img src="images/tic.png"> Órtesis de silicona. </p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/plantillas-ortopedicas.webp" alt="Descripción ortopodologia" class="description-image">
             </div>
@@ -327,7 +327,7 @@
                     <p class="tic"><img src="images/tic.png"> Prevenció d'afeccions i deformitats del peu. </p>
                     <p><img src="images/tic.png"> Donar resposta mitjançant tècniques diagnòstiques i tractaments
                         adequats.</p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                     <img class="podologia-img" src="images/podologia.webp" alt="Descripción Podología"
                         class="description-image">
                 </div>
@@ -348,7 +348,7 @@
                     </p>
 
                     </p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/piediabetico.webp" alt="Descripción pie diabetico" class="description-image">
             </div>
@@ -412,17 +412,6 @@
                     de qualitat i personalitzat.
                 </p>
             </div>
-            <!--  <div class="footer-section" id="footer-links">
-                <h3>Enllaços útils</h3>
-                <ul>
-                    <li><a href="https://www.podocat.cat/">Col·legi de Podòlegs de Catalunya</a></li>
-                    <li><a
-                            href="https://catsalut.gencat.cat/ca/serveis-sanitaris/prestacions-complementaries/atencio-podologica-persones-diabetiques/">Professionals
-                            peu diabètic CatSalut</a></li>
-                    <li><a href="#">Enllaç 3</a></li>
-                    <li><a href="#">Enllaç 4</a></li>
-                </ul>
-            </div> -->
             <div class="footer-section" id="footer-map">
                 <h3>Contacte</h3>
                 <iframe
