Corrige typos y agrega meta etiquetas para optimizacion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Títol de la Pàgina</title>
+    <meta name="description" content="Clínica especialitzada en ortopèdia, mútues sanitàries i millora de la qualitat de vida. Descobreix els nostres serveis personalitzats.">
+    <meta name="keywords" content="ortopèdia, mútues sanitàries, qualitat de vida, clínica, salut, serveis mèdics, peus, podologia">
+    <meta name="author" content="María Sol Graña - Mantisnet">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Podología La Devesa">
+    <meta property="og:description" content="Especialistes en Quiropodia, ortopèdia, Podología y Exploración Biomecánica. Contacta amb nosaltres per millorar la teva salut.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="css/cadira2.webp">
+
+    <title>Podología La Devesa</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -21,7 +30,7 @@
                     <li><a href="#hero">Inici</a></li>
                     <li><a href="#especialitats">Especialitats</a></li>
                     <li><a href="#ortopedia">Ortopèdia</a></li>
-                    <li><a href="#mutues">Mutues</a></li>
+                    <li><a href="#mutues">Mútues</a></li>
                     <li><a href="#footer-service">Contacte</a></li>
                 </ul>
             </nav>
@@ -55,7 +64,7 @@
                     <li><a href="#hero">Inici</a></li>
                     <li><a href="#especialitats">Especialitats</a></li>
                     <li><a href="#ortopedia">Ortopèdia</a></li>
-                    <li><a href="#mutues">Mutues</a></li>
+                    <li><a href="#mutues">Mútues</a></li>
                     <li><a href="#footer-service">Contacte</a></li>
                 </ul>
             </div>
@@ -68,7 +77,7 @@
                 </h2>
                 <p>Utilitzem tecnologia avançada i coneixements actualitzats per diagnosticar i tractar
                     els teus peus. Escollir-nos és optar per un enfocament integral que prioritza
-                    la teva comoditat i ualitat de vida, q amb solucions efectives i personalitzades.
+                    la teva comoditat i qualitat de vida, amb solucions efectives i personalitzades.
                 </p>
 
                 <div class="contact-container">
@@ -92,7 +101,7 @@
                 <div class="profile-info">
                     <h3 class="profile-name">Beth Samitier i Rubió</h3>
                     <p class="profile-job">
-                        <span class="violet">Podòloga i Tecnica en Ortopedia | </span>
+                        <span class="violet">Podòloga i tècnica en ortopèdia | </span>
                         <span class="orange">N° COL·LEGIADA 1185</span>
                     </p>
                     <p class="profile-description">Tractament de podologia de primera qualitat realitzat
@@ -110,7 +119,7 @@
                 <div class="circle">
                     <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
                 </div>
-                <h3>Quiropidia</h3>
+                <h3>Quiropòdia</h3>
                 <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
                     d'alteracions a les
                     ungles dels peus.</p>
@@ -178,7 +187,7 @@
                 <div class="circle">
                     <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
                 </div>
-                <h3>Peu Diabétic</h3>
+                <h3>Peu Diabètic</h3>
                 <p>És una complicació de la diabetis que es caracteritza per la infecció, ulceració o destrucció
                     dels teixits
                     del peu.</p>
@@ -197,7 +206,7 @@
                     <div class="circle">
                         <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
                     </div>
-                    <h3>Quiropidia</h3>
+                    <h3>Quiropòdia</h3>
                     <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
                         d'alteracions a les
                         ungles dels peus.</p>
@@ -254,7 +263,7 @@
                     <div class="circle">
                         <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
                     </div>
-                    <h3>Peu Diabétic</h3>
+                    <h3>Peu Diabètic</h3>
                     <p>És una complicació de la diabetis que es caracteritza per la infecció, ulceració o destrucció
                         dels teixits
                         del peu.</p>
@@ -271,7 +280,7 @@
         <div class="description-card" id="descripcion-card" style="display: none;">
             <div id="quiropidia-description" class="description active">
                 <div class="description-text">
-                    <h4>Quiropidia</h4> <br>
+                    <h4>Quiropòdia</h4> <br>
                     <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
                         alteracions
                         a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin
@@ -334,7 +343,7 @@
             </div>
             <div id="piediabetico-description" class="description">
                 <div class="description-text">
-                    <h4>Peu Diabétic</h4> <br>
+                    <h4>Peu Diabètic</h4> <br>
                     <p>El peu diabètic o síndrome del peu diabètic fa referència a la presència d'infecció, ulceració o
                         destrucció dels teixits del peu associada a neuropatia perifèrica i/o malaltia arterial
                         perifèrica de
@@ -359,7 +368,7 @@
 
     <section id="ortopedia">
         <div class="ortopedia-box">
-            <h2>ORTOPEDIA</h2>
+            <h2>ORTOPÈDIA</h2>
         </div>
         <div class="ortopedia-content">
             <div class="text-container">
@@ -380,11 +389,11 @@
 
     <section id="mutues">
         <div class="mutues-box">
-            <h2>MUTUES</h2>
+            <h2>MÚTUES</h2>
         </div>
         <div class="mutues-content">
             <p class="description.active">
-                Mütues sanitaries amb les quals treballem
+                Mútues sanitàries amb les quals treballem
             </p>
             <div class="mutues-logos">
                 <img src="mutues/mgcmutua.png" alt="Logo MGC mutua" class="mutue-logo">
@@ -420,7 +429,7 @@
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
             <div class="information">
-                <p> <img src="images/ubicacion.png"> Joaquin Vayreda, 65 - 17001 Giriona</p>
+                <p> <img src="images/ubicacion.png"> Joaquin Vayreda, 65 - 17001 Girona</p>
                 <p> <img src="images/telefono.svg"> 972 20 77 16</p>
                 <p> <img src="images/mail.svg"> podevesa@gmail.com</p>
             </div>
