Ajusta espacios del footer

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     width="350" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
-            <div class="information">
+            <div class="footer-section" id="information">
                 <p> <img src="images/ubicacion.png"> Joaquin Vayreda, 65 - 17001 Girona</p>
                 <p> <img src="images/telefono.svg"> 972 20 77 16</p>
                 <p> <img src="images/mail.svg"> podevesa@gmail.com</p>
