Mejora etiquetas alt para imagenes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Podología La Devesa">
     <meta property="og:description" content="Especialistes en Quiropodia, ortopèdia, Podología y Exploración Biomecánica. Contacta amb nosaltres per millorar la teva salut.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="css/cadira2.webp">
+    <meta property="og:image" content="css/cadira.webp">
 
     <title>Podología La Devesa</title>
     <link rel="stylesheet" href="css/main.css">
@@ -134,7 +134,7 @@
 
             <div class="card" id="exploracio" onclick="showDescriptionMobile('exploracio')">
                 <div class="circle">
-                    <img src="images/exploracio-icon.png" alt="exploracio" class="circle-icon">
+                    <img src="images/exploracio-icon.png" alt="exploracio biomecànica" class="circle-icon">
                 </div>
                 <h3>Exploració Biomecànica</h3>
                 <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
@@ -185,7 +185,7 @@
 
             <div class="card" id="piediabetico" onclick="showDescriptionMobile('piediabetico')">
                 <div class="circle">
-                    <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
+                    <img src="images/piediabetico-icon.png" alt="pie diabetico" class="circle-icon">
                 </div>
                 <h3>Peu Diabètic</h3>
                 <p>És una complicació de la diabetis que es caracteritza per la infecció, ulceració o destrucció
@@ -218,7 +218,7 @@
 
                 <li class="card" id="exploracio" onclick="showDescription('exploracio')">
                     <div class="circle">
-                        <img src="images/exploracio-icon.png" alt="exploracio" class="circle-icon">
+                        <img src="images/exploracio-icon.png" alt="Exploracio Biomecànica" class="circle-icon">
                     </div>
                     <h3>Exploració Biomecànica</h3>
                     <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
@@ -307,8 +307,8 @@
                         alteracions que influeixen en la funció correcta del peu durant la marxa. El tractament
                         d’aquestes alteracions és mitjançant:</p>
                     <h5>Per què triar-nos?</h5> <br>
-                    <p class="tic"><img src="images/tic.png"> Plantilles ortopèdiques a mida.</p>
-                    <p><img src="images/tic.png"> Órtesis de silicona. </p>
+                    <p class="tic"><img src="images/tic.png" alt=""> Plantilles ortopèdiques a mida.</p>
+                    <p><img src="images/tic.png" alt=""> Órtesis de silicona. </p>
                     <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/plantillas-ortopedicas.webp" alt="Descripción ortopodologia" class="description-image">
@@ -318,23 +318,23 @@
                     <h4>Podología</h4> <br>
                     <p class="podiatry-content">
                         <span class="podiatry-category">PODOLOGIA PEDIÀTRICA </span>
-                        <span><img src="images/arrow-especialidad.png">Especialitzada al peu del nen i les seves
+                        <span><img src="images/arrow-especialidad.png" alt="">Especialitzada al peu del nen i les seves
                             afeccions més comunes.</span>
                         <br>
                         <br>
                         <span class="podiatry-category">PODOLOGIA ESPORTIVA </span>
-                        <span><img src="images/arrow-especialidad.png"> Especialitzada en el gest de l'esportista i en
+                        <span><img src="images/arrow-especialidad.png" alt=""> Especialitzada en el gest de l'esportista i en
                             les afeccions més comunes. Prevenció i tractament de les lesions de l'esportista.</span>
                         <br>
                         <br>
                         <span class="podiatry-category">PODOLOGIA GERIÀTRICA</span>
-                        <span><img src="images/arrow-especialidad.png"> Especialitzada en el peu de la gent gran.
+                        <span><img src="images/arrow-especialidad.png" alt=""> Especialitzada en el peu de la gent gran.
                             Prevenció i cura de les patologies.</span>
                     </p>
                     <h5>Per què triar-nos?</h5> <br>
-                    <p class="tic"><img src="images/tic.png"> Promoció de la salut integral. </p>
-                    <p class="tic"><img src="images/tic.png"> Prevenció d'afeccions i deformitats del peu. </p>
-                    <p><img src="images/tic.png"> Donar resposta mitjançant tècniques diagnòstiques i tractaments
+                    <p class="tic"><img src="images/tic.png" alt=""> Promoció de la salut integral. </p>
+                    <p class="tic"><img src="images/tic.png" alt=""> Prevenció d'afeccions i deformitats del peu. </p>
+                    <p><img src="images/tic.png" alt=""> Donar resposta mitjançant tècniques diagnòstiques i tractaments
                         adequats.</p>
                     <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                     <img class="podologia-img" src="images/podologia.webp" alt="Descripción Podología"
@@ -353,7 +353,7 @@
                         Cura del peu diabètic i tractament preventiu d’úlceres vasculars i neuropàtiques.
                         <br>
 
-                    <p class="tic"><img src="images/tic.png"> Adscrita en el PEU DIABÈTIC del CATSALUT desde el 2009.
+                    <p class="tic"><img src="images/tic.png" alt=""> Adscrita en el PEU DIABÈTIC del CATSALUT desde el 2009.
                     </p>
 
                     </p>
@@ -429,9 +429,9 @@
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
             <div class="footer-section" id="information">
-                <p> <img src="images/ubicacion.png">     Joaquin Vayreda, 65 - 17001 Girona</p>
-                <p> <img src="images/telefono.svg">     972 20 77 16</p>
-                <p> <img src="images/mail.svg">      podevesa@gmail.com</p>
+                <p> <img src="images/ubicacion.png" alt="">     Joaquin Vayreda, 65 - 17001 Girona</p>
+                <p> <img src="images/telefono.svg" alt="">     972 20 77 16</p>
+                <p> <img src="images/mail.svg" alt="">      podevesa@gmail.com</p>
             </div>
         </div>
         <div class="footer-copy">
