Actualiza imagen exploracion biomecanica

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </p>
                     <button class="CTA" onclick="window.location.href='#footer-service';">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.webp" alt="Descripción Exploracio Biomecànica" class="description-image">
+                <img src="images/exploracio.webp" alt="Descripción Exploracio Biomecànica" class="description-image">
             </div>
             <div id="ortopodologia-description" class="description">
                 <div class="description-text">
