Elimina acento en podologia

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="circle">
                     <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
                 </div>
-                <h3>Podología</h3>
+                <h3>Podologia</h3>
                 <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les
                     malalties i
                     alteracions que afecten el peu.</p>
@@ -248,7 +248,7 @@
                     <div class="circle">
                         <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
                     </div>
-                    <h3>Podología</h3>
+                    <h3>Podologia</h3>
                     <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les
                         malalties i
                         alteracions que afecten el peu.</p>
@@ -315,7 +315,7 @@
             </div>
             <div id="podologia-description" class="description">
                 <div class="description-text">
-                    <h4>Podología</h4> <br>
+                    <h4>Podologia</h4> <br>
                     <p class="podiatry-content">
                         <span class="podiatry-category">PODOLOGIA PEDIÀTRICA </span>
                         <span><img src="images/arrow-especialidad.png" alt="">Especialitzada al peu del nen i les seves
@@ -429,7 +429,7 @@
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
             <div class="footer-section" id="information">
-                <p> <img src="images/ubicacion.png" alt="">     Joaquin Vayreda, 65 - 17001 Girona</p>
+                <p> <img src="images/ubicacion.png" alt="">     Joaquim Vayreda, 65 - 17001 Girona</p>
                 <p> <img src="images/telefono.svg" alt="">     972 20 77 16</p>
                 <p> <img src="images/mail.svg" alt="">      podevesa@gmail.com</p>
             </div>
