agrega sitemap para seo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="css/cadira.webp">
 
+    <meta name="google-site-verification" content="OPbc3jWiAKXzhajHTHoAxKwnizNpOUiZRU4NlVp3o48" />
+
     <title>Podología La Devesa</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
@@ -170,7 +172,7 @@
                 <div class="circle">
                     <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
                 </div>
-                <h3>Podología</h3>
+                <h3>Podologia</h3>
                 <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les
                     malalties i
                     alteracions que afecten el peu.</p>
@@ -248,7 +250,7 @@
                     <div class="circle">
                         <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
                     </div>
-                    <h3>Podología</h3>
+                    <h3>Podologia</h3>
                     <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les
                         malalties i
                         alteracions que afecten el peu.</p>
@@ -315,7 +317,7 @@
             </div>
             <div id="podologia-description" class="description">
                 <div class="description-text">
-                    <h4>Podología</h4> <br>
+                    <h4>Podologia</h4> <br>
                     <p class="podiatry-content">
                         <span class="podiatry-category">PODOLOGIA PEDIÀTRICA </span>
                         <span><img src="images/arrow-especialidad.png" alt="">Especialitzada al peu del nen i les seves
@@ -429,7 +431,7 @@
                     referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
             <div class="footer-section" id="information">
-                <p> <img src="images/ubicacion.png" alt="">     Joaquin Vayreda, 65 - 17001 Girona</p>
+                <p> <img src="images/ubicacion.png" alt="">     Joaquim Vayreda, 65 - 17001 Girona</p>
                 <p> <img src="images/telefono.svg" alt="">     972 20 77 16</p>
                 <p> <img src="images/mail.svg" alt="">      podevesa@gmail.com</p>
             </div>
@@ -442,5 +444,6 @@
     <script src="scripts.js"></script>
 
 </body>
+
 
 </html>
